--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactjs.biri.me",
+  "name": "reactjs.bixel.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "^3.4.1",
     "react-twitter-widgets": "^1.7.1"
   },
